# cutter.base

./: .gitignore  README.md  SETUP.sh  cookiecutter.json  pyproject.toml
cutter.base/: README.md  cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py  pre_prompt.py
{{cookiecutter.hyphenated}}/: README.md  SETUP.sh  pyproject.toml
{{cookiecutter.hyphenated}}/.bch/: README.txt  activate.sh  dot-bashrc  dot-profile
{{cookiecutter.hyphenated}}/.bch.init/: 102.demo  init.sh
{{cookiecutter.hyphenated}}/.bch.lbin/: {{cookiecutter.dotted}}.init
{{cookiecutter.hyphenated}}/.bch/init/: 100.exports  678.demo  init.sh
{{cookiecutter.hyphenated}}/.bch/lbin/: {{cookiecutter.dotted}}
{{cookiecutter.hyphenated}}/.bch/user/: 000.verbose-notice  100.append-bin-to-path  200.demo  config.sh
