[project]
name = "{{ cookiecutter.hyphenated }}"
version = "0.0.0"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}"}]
requires-python = ">=3.8"
dependencies = [
    "bumpver>=2023.1129",
    "pytest==8.3.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/actions"
{% endif %}
[project.scripts]
{{ cookiecutter.hyphenated }} = "{{ cookiecutter.underscored }}.cli:cli"

[project.optional-dependencies]
test = ["pytest==8.3.3"]

######################################################################

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"VERSION" = [
    '{version}',

]
"README.md" = [
    'version = {version}',
]

